--- a/inventory/host_vars/grafana.yaml
+++ b/inventory/host_vars/grafana.yaml
@@ -52,6 +52,8 @@ grafana_url: http://0.0.0.0/grafana/
 grafana_security:
   admin_user: "{{ lookup('community.general.onepassword', 'grafana admin', vault='nas', field='username') }}"
   admin_password: "{{ lookup('community.general.onepassword', 'grafana admin', vault='nas', field='password') }}"
+# Workaround for grafana 11: https://github.com/grafana/grafana-ansible-collection/issues/220
+grafana_alerting: {}
 grafana_datasources:
   - name: prometheus
     type: prometheus
