--- a/inventory/host_vars/nas.yaml
+++ b/inventory/host_vars/nas.yaml
@@ -83,3 +83,5 @@ container_proxy_routes:
   - path: /pihole/
     backend: http://192.168.1.5/admin/
     type: pihole
+
+node_exporter_listen_address: 192.168.1.1:9100
