--- a/hosts.yaml
+++ b/hosts.yaml
@@ -6,3 +6,18 @@
     - role: auto-upgrade
     - role: exim4_mail_relay
     - role: print_server
+    - role: node_exporter
+  tasks:
+    # there are no smart capable devices on this host
+    - name: Disable smartmontools.service
+      ansible.builtin.service:
+        name: smartmontools
+        state: stopped
+        enabled: false
+
+    # there are no nvme devices on this host
+    - name: Disable nvmf-autoconnect
+      ansible.builtin.service:
+        name: nvmf-autoconnect
+        state: stopped
+        enabled: false
