--- a/inventory/host_vars/nas.yaml
+++ b/inventory/host_vars/nas.yaml
@@ -85,3 +85,4 @@ container_proxy_routes:
     type: pihole
 
 node_exporter_listen_address: 192.168.1.1:9100
+node_exporter_textfile_collector_dir: /var/lib/node_exporter
