--- a/inventory/host_vars/grafana.yaml
+++ b/inventory/host_vars/grafana.yaml
@@ -11,11 +11,25 @@ static_ip:
     gateway: 192.168.1.1
 
 prometheus_web_external_url: /prometheus
+prometheus_scrape_configs:
+  - job_name: "fritz-exporter"
+    scrape_interval: 50s
+    scrape_timeout: 45s
+    static_configs:
+      - targets:
+          - 192.168.1.20:9787
+  - job_name: "node-file-servicediscovery"
+    file_sd_configs:
+      - files:
+        # reference to prometheus_targets.node
+          - "{{ prometheus_config_dir }}/file_sd/node.yml"
+
 prometheus_targets:
   node:
     - targets:
         - 192.168.1.1:9100
         - pi01:9100
+
 prometheus_alert_rules_files:
   - "inventory/grafana/prometheus/rules/*.rules"
 prometheus_alertmanager_config:
