--- a/inventory/hosts.yaml
+++ b/inventory/hosts.yaml
@@ -11,11 +11,15 @@ all:
     grafana:
       ansible_connection: machinectl
       ansible_host: grafana
+    fritz-exporter:
+      ansible_connection: machinectl
+      ansible_host: fritz-exporter
   children:
     containers:
       hosts:
         pihole:
         grafana:
+        fritz-exporter:
     internet_mail_relay:
       hosts:
         nas:
