--- a/inventory/host_vars/grafana.yaml
+++ b/inventory/host_vars/grafana.yaml
@@ -12,6 +12,23 @@ static_ip:
 
 prometheus_web_external_url: /prometheus
 prometheus_scrape_configs:
+  - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]  # Look for a HTTP 200 response.
+    static_configs:
+      - targets:
+          - http://fritz.repeater
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 127.0.0.1:9115
+  - job_name: 'blackbox_exporter'
+    static_configs:
+      - targets: ['127.0.0.1:9115']
   - job_name: "fritz-exporter"
     scrape_interval: 50s
     scrape_timeout: 45s
