--- a/roles/nspawn-host/tasks/main.yaml
+++ b/roles/nspawn-host/tasks/main.yaml
@@ -4,6 +4,7 @@
     name:
       - systemd-container
       - debootstrap
+  tags: ['nspawn']
 
 - name: Make sure nspawn settings directy exists
   ansible.builtin.file:
@@ -12,15 +13,18 @@
     group: root
     mode: "0755"
     state: directory
+  tags: ['nspawn']
 
 - name: Enable systemd-networkd
   ansible.builtin.service:
     name: systemd-networkd
     enabled: true
     state: started
+  tags: ['nspawn']
 
 - name: Create containers
   ansible.builtin.include_tasks: "{{ container.os | default('debian') }}-container.yaml"
   loop: "{{ nh_containers }}"
   loop_control:
     loop_var: container
+  tags: ['nspawn']
