Fix the text file collectore setup
I broke the default textfile collector settings of the distribution.
The smartmon collection did no longer work because I overrode the
default collector directory. Instead of using a custom directory the
offsitze backuzp reporting uses the default directory.

This fixes the smart and apt monitoring.

--- a/inventory/host_vars/nas.yaml
+++ b/inventory/host_vars/nas.yaml
@@ -104,4 +104,5 @@ container_proxy_routes:
     type: pihole
 
 node_exporter_listen_address: 192.168.1.1:9100
-node_exporter_textfile_collector_dir: /var/lib/node_exporter
+# this is already the default config on debian
+# node_exporter_textfile_collector_dir: /var/lib/prometheus/node-exporter/
