--- a/roles/node_exporter/tasks/main.yaml
+++ b/roles/node_exporter/tasks/main.yaml
@@ -2,13 +2,14 @@
   ansible.builtin.package:
     name: prometheus-node-exporter
 
-- name: Create textfile collector
+- name: Create textfile collector directory
   ansible.builtin.file:
     path: "{{ node_exporter_textfile_collector_dir }}"
     state: "directory"
     mode: "0775"
     owner: prometheus
     group: prometheus
+  when: node_exporter_textfile_collector_dir is defined
 
 - name: Configure node exporter
   ansible.builtin.template:
