--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,9 +16,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          cache: 'pip'
+          cache-dependency-path: '.github/requirements-pipeline.txt'
 
       - name: Install dependencies.
-        run: pip3 install yamllint ansible-core ansible-lint jmespath
+        run: pip3 install -r '.github/requirements-pipeline.txt'
 
       - name: Install ansible collections
         run: ansible-galaxy install -r requirements.yaml
