--- a/roles/exim4_mail_relay/handlers/main.yaml
+++ b/roles/exim4_mail_relay/handlers/main.yaml
@@ -1,6 +1,8 @@
 - name: Regenrate config
   ansible.builtin.command: update-exim4.conf
+  tags: exim4_mail_relay
 - name: Restart exim4
   ansible.builtin.service:
     name: exim4
     state: restarted
+  tags: exim4_mail_relay
