--- a/roles/bridge/handlers/main.yaml
+++ b/roles/bridge/handlers/main.yaml
@@ -3,6 +3,8 @@
   ansible.builtin.service:
     name: dnsmasq
     state: restarted
+  tags: bridge
 
 - name: Reload sysctl
   ansible.builtin.command: sysctl --system
+  tags: bridge
